fixed picture stretch when changing profile picture

--- a/frontend/src/styles/scss/components/_settings.scss
+++ b/frontend/src/styles/scss/components/_settings.scss
@@ -76,8 +76,10 @@
         justify-content: center;
         row-gap: 1em;
         padding: 0 25%;
-        img,
+        .profile-pic,
         label {
+          background-size: cover;
+          background-position-y: center;
           width: 100px;
           height: 100px;
           border-radius: 5em;
